<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rushabh.importandexport.fragments.ModeOfTransportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_transtitle1" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_tran_detail1" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_title2" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail2" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title3" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail3" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title4" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail4" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title5" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail5" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title5" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail5" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title6" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail6" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title7" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail7" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title8" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail8" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title9" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail9" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title10" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail10" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title11" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail11" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title12" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail12" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title13" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail13" />

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_or_trans_title14" />

        <TextView
            style="@style/style_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_trans_detail14" />
    </LinearLayout>
</ScrollView>

