<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_import_export_basics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rushabh.importandexport.activities.ImportExportBasicsActivity">
    <ScrollView
        android:layout_margin="@dimen/scroll_view_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/style_title"
                android:text="@string/preli_impexp_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_detail"
                android:text="@string/preli_impexp_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_title"
                android:text="@string/preli_impexp_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_detail"
                android:text="@string/preli_impexp_detail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_title"
                android:text="@string/preli_impexp_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_detail"
                android:text="@string/preli_impexp_detail3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_title"
                android:text="@string/preli_impexp_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_detail"
                android:text="@string/preli_impexp_detail4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_title"
                android:text="@string/preli_impexp_title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_detail"
                android:text="@string/preli_impexp_detail5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_title"
                android:text="@string/preli_impexp_title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/style_detail"
                android:text="@string/preli_impexp_detail6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

